# merpcr

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_GITHUB_ACTIONS.md  merPCR.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_merPCR.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/codeql/queries/: BioinformaticsSecurityQueries.ql
.github/workflows/: ci.yml  code-quality.yml  release.yml  security.yml
docs/: API.md  EXAMPLES.md  README.md  USER_GUIDE.md
scripts/: dependency_validation.py  merpcr  performance_baseline.py
src/merpcr/: __init__.py  __main__.py  cli.py
src/merpcr/core/: __init__.py  engine.py  models.py  utils.py
src/merpcr/io/: fasta.py  sts.py
tests/: test_basic.py  test_cli.py  test_cli_enhanced.py  test_comprehensive.py  test_core_engine_comprehensive.py  test_core_models.py  test_engine_internals.py  test_error_injection.py  test_io_modules.py  test_module_entry_point.py  test_performance.py  test_property_based.py  test_threading_stress.py  test_utils_comprehensive.py
